to test detail component scroll bug on mobile

--- a/src/app/shared/components/detail/index.css
+++ b/src/app/shared/components/detail/index.css
@@ -269,6 +269,11 @@
     scroll-snap-align: start;
     scroll-snap-coordinate: 0 0;
     transform: translate3d(0, 0, 0);
+
+    &.--snap-off {
+      scroll-snap-align: none;
+      scroll-snap-coordinate: unset;
+    }
   }
 }
 
